# stm32-embassy-repro-bug

./: Cargo.toml  justfile  memory.x
.cargo/: config.toml
src/: main.rs
