[package]
name = "rust-stm32f072b-disco-test"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = "s"
debug = "full"
lto = "fat"
incremental = false
codegen-units = 1

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime", "defmt", "tick-hz-32_768"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt"] }
embassy-stm32 = { version = "0.4", default-features = false, features = ["defmt", "stm32f072rb", "exti", "rt", "unstable-pac", "time-driver-any"] }

defmt = "1"
defmt-rtt = "1"

panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"

portable-atomic = { version = "1.11", features = ["unsafe-assume-single-core"] }

# [patch.crates-io]
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "fcd5383f475f7bd413541123d941d3d7e1cd326b" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fcd5383f475f7bd413541123d941d3d7e1cd326b" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fcd5383f475f7bd413541123d941d3d7e1cd326b" }
